tests/baselines/reference/decoratorOnClassAccessor7.errors.txt
tests/cases/conformance/decorators/class/accessor/decoratorOnClassAccessor7.ts(26,5): error TS1207: Decorators cannot be applied to multiple get/set accessors of the same name.
tests/cases/conformance/decorators/class/accessor/decoratorOnClassAccessor7.ts(31,5): error TS1207: Decorators cannot be applied to multiple get/set accessors of the same name.
tests/cases/conformance/decorators/class/accessor/decoratorOnClassAccessor7.ts(56,5): error TS1207: Decorators cannot be applied to multiple get/set accessors of the same name.
tests/cases/conformance/decorators/class/accessor/decoratorOnClassAccessor7.ts(61,5): error TS1207: Decorators cannot be applied to multiple get/set accessors of the same name.


==== tests/cases/conformance/decorators/class/accessor/decoratorOnClassAccessor7.ts (4 errors) ====
    declare function dec1<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>): TypedPropertyDescriptor<T>;
    declare function dec2<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>): TypedPropertyDescriptor<T>;
    
    class A {
        @dec1 get x() { return 0; }
        set x(value: number) { }
    }
    
    class B {
        get x() { return 0; }
        @dec2 set x(value: number) { }
    }
    
    class C {
        @dec1 set x(value: number) { }
        get x() { return 0; }
    }
    
    class D {
        set x(value: number) { }
        @dec2 get x() { return 0; }
    }
    
    class E {
        @dec1 get x() { return 0; }
        @dec2 set x(value: number) { }
        ~
!!! error TS1207: Decorators cannot be applied to multiple get/set accessors of the same name.
    }
    
    class F {
        @dec1 set x(value: number) { }
        @dec2 get x() { return 0; }
        ~
!!! error TS1207: Decorators cannot be applied to multiple get/set accessors of the same name.
    }
    
    const A1 = class {
        @dec1 get x() { return 0; }
        set x(value: number) { }
    }
    
    const B1 = class {
        get x() { return 0; }
        @dec2 set x(value: number) { }
    }
    
    const C1 = class {
        @dec1 set x(value: number) { }
        get x() { return 0; }
    }
    
    const D1 = class {
        set x(value: number) { }
        @dec2 get x() { return 0; }
    }
    
    const E1 = class {
        @dec1 get x() { return 0; }
        @dec2 set x(value: number) { }
        ~
!!! error TS1207: Decorators cannot be applied to multiple get/set accessors of the same name.
    }
    
    const F1 = class {
        @dec1 set x(value: number) { }
        @dec2 get x() { return 0; }
        ~
!!! error TS1207: Decorators cannot be applied to multiple get/set accessors of the same name.
    }
    